[Fix]: Z-index in movil

--- a/css/header.sass
+++ b/css/header.sass
@@ -53,6 +53,7 @@ header
 			background-repeat: no-repeat
 			background-size: 30px 30px
 			background-position: center
+			z-index: 2
 			&:hover
 				background-color: $second-color-orange
 				transition-property:  background-color
